--- a/public/index.html
+++ b/public/index.html
@@ -806,7 +806,7 @@
                             if (typeof text === 'number') {
                                 return text.toLocaleString('ar-IQ');
                             }
-                            return String(text); // الاحتفاظ بالنص كما هو
+                            return String(text);
                         };
 
                         const createSectionElement = (title, contentItems, isSubsection = false) => {
@@ -821,12 +821,12 @@
                             section.style.position = 'absolute';
                             section.style.left = '-9999px';
                             section.style.fontSize = '14px';
-                            section.style.lineHeight = '1.6'; // تقليل تباعد الأسطر
+                            section.style.lineHeight = '1.6';
                             section.style.margin = '10px';
                             section.style.overflow = 'visible';
                             section.style.display = 'block';
                             section.style.visibility = 'visible';
-                            section.style.minHeight = '800px';
+                            section.style.minHeight = 'auto'; // إزالة الارتفاع الثابت
 
                             if (!isSubsection) {
                                 const header = document.createElement('div');
@@ -863,19 +863,18 @@
                                 const p = document.createElement('p');
                                 p.style.display = 'flex';
                                 p.style.alignItems = 'center';
-                                p.style.margin = '6px 0'; // تقليل المسافة العمودية
-                                p.style.padding = '6px'; // تقليل الحشوة
+                                p.style.margin = '5px 0';
+                                p.style.padding = '5px';
                                 p.style.background = '#FFF';
                                 p.style.borderRadius = '3px';
                                 p.style.border = '1px solid #DBC2A4';
                                 p.style.fontSize = '13px';
 
-                                // فصل النص والقيمة
                                 const parts = item.split(':').map(part => part.trim());
                                 const label = parts[0] || '';
                                 const valueAndUnit = parts[1] || '';
                                 p.innerHTML = `
-                                    <span style="min-width: 150px; text-align: right; margin-left: 10px;">${sanitizeText(label)}:</span>
+                                    <span style="min-width: 120px; text-align: right; margin-left: 8px;">${sanitizeText(label)}:</span>
                                     <span style="text-align: right;">${sanitizeText(valueAndUnit)}</span>
                                 `;
                                 content.appendChild(p);
@@ -897,30 +896,45 @@
                                 useCORS: true,
                                 logging: true,
                                 windowWidth: 794,
-                                windowHeight: sectionElement.scrollHeight + 800,
+                                windowHeight: sectionElement.scrollHeight,
                                 scrollX: 0,
                                 scrollY: 0,
                                 backgroundColor: '#FFF'
                             });
                             const imgData = canvas.toDataURL('image/jpeg', 0.95);
-                            const imgWidth = 190;
-                            const imgHeight = (canvas.height * imgWidth) / canvas.width;
-                            const pageHeight = 277 - 30;
-                            let position = 0;
+                            const imgWidth = 190; // عرض ثابت للصورة
+                            const imgHeight = (canvas.height * imgWidth) / canvas.width; // الارتفاع الأصلي
+                            const pageHeight = 277 - 20; // ارتفاع الصفحة مطروحًا الهوامش
+                            let position = 0; // الإزاحة في الصورة
 
                             console.log(`قسم "${sanitizeText(sectionName)}": ارتفاع الصورة ${imgHeight.toFixed(2)} مم, عدد الصفحات المتوقع ${Math.ceil(imgHeight / pageHeight)}`);
 
-                            doc.addPage();
-
                             while (position < imgHeight) {
                                 const remainingHeight = Math.min(pageHeight, imgHeight - position);
-                                console.log(`إضافة صورة لقسم "${sectionName}": إزاحة=${position.toFixed(2)} مم, ارتفاع=${remainingHeight.toFixed(2)} مم`);
-                                doc.addImage(imgData, 'JPEG', 10, 10, imgWidth, remainingHeight, undefined, 'FAST');
+                                const sourceY = (position * canvas.height) / imgHeight; // إزاحة المصدر في الصورة
+                                const sourceHeight = (remainingHeight * canvas.height) / imgHeight;
+
+                                doc.addImage(
+                                    imgData,
+                                    'JPEG',
+                                    10, // هامش أفقي
+                                    10, // هامش عمودي
+                                    imgWidth,
+                                    remainingHeight,
+                                    undefined,
+                                    'FAST',
+                                    0,
+                                    sourceY,
+                                    canvas.width,
+                                    sourceHeight
+                                );
+
                                 position += remainingHeight;
                                 if (position < imgHeight) {
                                     doc.addPage();
                                 }
                             }
+
                             document.body.removeChild(sectionElement);
                         };
 
@@ -983,7 +997,7 @@
                         await addSectionToPDF(createSectionElement('أسعار المواد المعتمدة (2025)', materialItems), 'أسعار المواد');
 
                         if (doc.internal.getNumberOfPages() > 0) {
-                            doc.deletePage(1);
+                            doc.deletePage(1); // إزالة الصفحة الأولى الفارغة
                         }
 
                         const finalPageCount = doc.internal.getNumberOfPages();
@@ -1016,7 +1030,7 @@
 
                         // فتح PDF في نافذة جديدة
                         const pdfDataUri = doc.output('datauristring');
-                        const pdfWindow = window.open('', '_blank', 'noopener,noreferrer'); // إضافة خيارات للأمان
+                        const pdfWindow = window.open('', '_blank', 'noopener,noreferrer');
                         if (pdfWindow) {
                             pdfWindow.document.open();
                             pdfWindow.document.write(`
@@ -1032,7 +1046,6 @@
                             pdfWindow.document.close();
                         } else {
                             console.error('فشل فتح النافذة الجديدة. تحقق من إعدادات حظر النوافذ المنبثقة في المتصفح.');
-                            // الرجوع إلى التنزيل إذا فشل فتح النافذة
                             doc.save(`تقرير_تكاليف_البناء_${new Date().toISOString().split('T')[0]}.pdf`);
                         }
 
